--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   <div class="max-w-5xl mx-auto p-6">
     <!-- Header -->
     <header class="pretty p-6 md:p-7">
-      <h1 class="text-2xl md:text-3xl font-extrabold">🦕 Liste de cadeaux — Noël & Anniversaire</h1>
-      <p class="text-white/85">Partage le lien. Chacun coche ou clique sur le lien — simple comme bonjour.</p>
+      <h1 class="text-2xl md:text-3xl font-extrabold">🦖 Noël & Anniversaire de Matteo</h1>
+      <p class="text-white/85">Pour les vêtements il porte du 98cm ~3ans dans la plupart des enseignes / chaussures 24/25.</p>
     </header>
 
     <!-- Filtres -->
@@ -99,20 +99,16 @@
         <thead class="navy">
           <tr>
             <th class="text-left px-4 py-3 w-12">OK</th>
-            <th class="text-left px-4 py-3">Nom du jouet</th>
+            <th class="text-left px-4 py-3">Nom</th>
             <th class="text-left px-4 py-3">Prix</th>
-            <th class="text-left px-4 py-3">Magasin(s) alternatif(s)</th>
+            <th class="text-left px-4 py-3">Boutique(s)</th>
             <th class="text-left px-4 py-3 w-10"></th>
           </tr>
         </thead>
         <tbody id="tbody" class="navy divide-y divide-white/10"></tbody>
       </table>
-      <div id="emptyState" class="text-center text-white/90 py-10 hidden">Aucun jouet à afficher pour le moment.</div>
+      <div id="emptyState" class="text-center text-white/90 py-10 hidden">Rien à afficher pour le moment.</div>
     </section>
-
-    <footer class="text-xs text-white/85 mt-6 text-center">
-      Astuce : l’ajout se fait avec le bouton <strong>＋</strong> en bas à droite.
-    </footer>
   </div>
 
   <!-- Bouton + -->
